--- a/PocketUni/project.properties
+++ b/PocketUni/project.properties
@@ -14,8 +14,8 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 target=android-19
 
 android.library=false
-android.library.reference.1=..\\ToolsLib
-android.library.reference.2=..\\UrlImageViewHelper
-android.library.reference.3=..\\alipay_lib
-android.library.reference.4=..\\ShareSDK_Android_2.3.0\\ShareSDK_for_Android\\Libs\\OneKeyShare
-android.library.reference.5=../Android_CyberPayPlugin
+android.library.reference.1=../ToolsLib
+android.library.reference.2=../MainLibs
+android.library.reference.3=../alipay_lib
+android.library.reference.4=../UrlImageViewHelper
+android.library.reference.5=../OneKeyShare
