--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -357,6 +357,10 @@
             android:windowSoftInputMode="adjustPan" />
 
         <!-- event -->
+         <activity
+            android:name=".activity.event.EventCommentsEditActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.event.EventDetailActivity"
             android:screenOrientation="portrait"
