--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -522,6 +522,10 @@
             android:name=".activity.photo.AlbumListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+          <activity
+            android:name=".activity.photo.PhotoListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <!-- service -->
         <service
             android:name="com.baidu.location.f"
