--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -431,6 +431,10 @@
             android:name=".activity.group.GroupListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+         <activity
+            android:name=".activity.group.GroupEventListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.group.GroupMemberManageActivity"
             android:screenOrientation="portrait"
