--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -435,6 +435,10 @@
             android:name=".activity.group.GroupEventListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+          <activity
+            android:name=".activity.group.GroupNoticeListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.group.GroupMemberManageActivity"
             android:screenOrientation="portrait"
