--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -50,7 +50,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-    
+
     <application
         android:name=".activity.PuApp"
         android:allowBackup="true"
@@ -221,6 +221,7 @@
             android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -299,11 +300,11 @@
             android:name=".activity.app.CourseViewActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-         <activity
+        <activity
             android:name=".activity.app.DonateListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-         <activity
+        <activity
             android:name=".activity.app.DonateViewActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
@@ -357,7 +358,7 @@
             android:windowSoftInputMode="adjustPan" />
 
         <!-- event -->
-         <activity
+        <activity
             android:name=".activity.event.EventCommentsEditActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
@@ -431,12 +432,16 @@
             android:name=".activity.group.GroupListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-         <activity
+        <activity
             android:name=".activity.group.GroupEventListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-          <activity
+        <activity
             android:name=".activity.group.GroupNoticeListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.group.GroupDynamicListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
@@ -524,13 +529,13 @@
             android:name=".activity.weibo.WeiboViewListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        
+
         <!-- photo -->
-          <activity
+        <activity
             android:name=".activity.photo.AlbumListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-          <activity
+        <activity
             android:name=".activity.photo.PhotoListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
