--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -445,6 +445,10 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
+            android:name=".activity.group.GroupDynamicEditActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name=".activity.group.GroupMemberManageActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
