--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -364,7 +364,11 @@
             android:name="com.xyhui.activity.app.TupopSettingActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
+        <activity
+            android:name="com.xyhui.activity.app.SchoolListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        
         <!-- event -->
         <activity
             android:name=".activity.event.EventCommentsEditActivity"
