--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -273,6 +273,10 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
+            android:name=".activity.TabMeActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name=".activity.UserInitActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
@@ -372,7 +376,7 @@
             android:name="com.xyhui.activity.app.SchoolListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        
+
         <!-- event -->
         <activity
             android:name=".activity.event.EventCommentsEditActivity"
