--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -395,6 +395,10 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
+            android:name=".activity.event.EventActivityUserListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name=".activity.event.EventLaunchActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
