13 同一个相册查看图片，要做到能左右滑动换图片，不能每次进相册看图都从列表点击查看一张图片，再退出重新查看下一张图片

--- a/PocketUni/AndroidManifest.xml
+++ b/PocketUni/AndroidManifest.xml
@@ -575,6 +575,10 @@
             android:name=".activity.photo.PhotoListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.photo.PhotosActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <!-- service -->
         <service
             android:name="com.baidu.location.f"
